2012-05-02      Stephan Linz <linz@li-pro.net>

	* platform: harmonize kernel configuration for 13.2 designs

2012-04-29      Stephan Linz <linz@li-pro.net>

	* platform: fix target name missmatch (to ML505)
	* xlbsp: upgrade to lates exports from ISE 13.2

2012-04-25	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to u-boot-2012.04.01

2012-04-24	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-ML505-MMU-lite-13.2
