@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:25:50
+ * Today is: Friday, the 04 of May, 2012; 22:18:09
  *
  * XPS project directory: Xilinx-ML505-MMU-lite-13.2
  */
@@ -43,11 +43,11 @@
 	model = "Xilinx-ML505-MMU-lite-13.2";
 	aliases {
 		ethernet0 = &xps_ether_0;
-		serial0 = &xps_uart_1;
-		serial1 = &xps_uart_0;
+		serial0 = &xps_uart_0;
+		serial1 = &xps_uart_1;
 	} ;
 	chosen {
-		bootargs = "console=ttyUL0,115200 root=/dev/mtdblock2 rw rootfstype=jffs2 mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
+		bootargs = "console=ttyUL0,115200 ubi.mtd=2 root=ubi0:root rootfstype=ubifs rw mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
 		linux,stdout-path = "/plb@0/serial@89ff0000";
 	} ;
 	cpus {
@@ -316,7 +316,7 @@
 			device_type = "network";
 			interrupt-parent = <&xps_intc_0>;
 			interrupts = < 4 0 >;
-			local-mac-address = [ 00 0a 35 8e cb 00 ];
+			local-mac-address = [ 00 0a 35 81 76 00 ];
 			phy-handle = <&phy0>;
 			reg = < 0x88f00000 0x10000 >;
 			xlnx,duplex = <0x1>;
@@ -471,7 +471,7 @@
 			device_type = "serial";
 			interrupt-parent = <&xps_intc_0>;
 			interrupts = < 1 0 >;
-			port-number = <1>;
+			port-number = <0>;
 			reg = < 0x89ff0000 0x10000 >;
 			xlnx,baudrate = <0x1c200>;
 			xlnx,data-bits = <0x8>;
@@ -486,7 +486,7 @@
 			device_type = "serial";
 			interrupt-parent = <&xps_intc_0>;
 			interrupts = < 6 0 >;
-			port-number = <0>;
+			port-number = <1>;
 			reg = < 0x89fe0000 0x10000 >;
 			xlnx,baudrate = <0x1c200>;
 			xlnx,data-bits = <0x8>;
