@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:25:47
+ * Today is: Friday, the 04 of May, 2012; 22:18:07
  *
  * Description: U-Boot Configurations
  *
